<resources>
    <string name="app_name">sail</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <string name="default_page_title">Product</string>

    <!--App defaults for dummy data-->
    <string name="default_heading">Default Heading</string>
    <string name="default_description">Default Description</string>
    <string name="default_content_description">Visual Asset</string>

    <!-- Bottom Navbar items text -->
    <string name="nav_item_home">Home</string>
    <string name="nav_item_search">Search</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_orders">Orders</string>
    <string name="nav_item_cart">Cart</string>

    <string name="ic_profile_text">Profile icon</string>
    <string name="sale_banner_img_desc_text">Sale banner image description</string>
    <string name="heading_popular_categories_text">Popular Categories</string>
    <string name="heading_products_text">Products</string>

    <string name="default_category_name">Headphones</string>

    <string name="product_image_desc_text">Product image</string>
    <string name="default_product_title">Basketball Shoe Air</string>
    <string name="default_product_end_time">Ending in 00:00:00</string>
    <string name="default_product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  </string>

    <string name="default_product_price">$0</string>
    <string name="default_rating">4.2</string>
    <string name="product_page_title">Product</string>

    <string name="default_name">John Doe</string>
    <string name="default_review">I found this product really useful. It is an absolutely killer deal and I couldn\'t ask for more.</string>
    <string name="default_review_rating">4.9</string>
    <string name="default_review_date_posted">22-01-2022</string>
    <string name="default_orders_placed">142</string>
    <string name="default_product_quantity">2</string>

    <string name="login_terms">By continuing, you agree to the application terms and conditions. To learn more, please visit www.sail.pk</string>
    <string name="connection_error">You need to be connected to internet to continue.</string>

    <string name="rating_star_image_desc">Rating star image description</string>

    <string name="item_order_product_img_desc_text">Item order product image description text</string>
    <string name="default_product_status">Completed</string>
    <string name="heading_product_quantity_text">QTY:</string>
    <string name="heading_my_orders_text">My Orders</string>
    <string name="heading_my_cart_text">Cart Products</string>
    <string name="heading_total_payment_text">Total Payment</string>
    <string name="heading_order_text">Order</string>
    <string name="default_product_rating">4.3</string>
    <string name="default_user_display_name">Farhan Ali</string>
    <string name="default_greeting_message">Hello</string>
    <string name="default_user_image_description">User image description</string>
    <string name="heading_rate_your_experience">Rate your experience</string>
    <string name="hint_rate_your_experience_here">Rate your experience here</string>
    <string name="heading_view_more_text"><![CDATA[View More >]]></string>
    <string name="button_submit_review_text">Submit Review</string>
    <string name="heading_orders_placed_text">Orders Placed:</string>
    <string name="default_product_orders_count">(104)</string>

</resources>