<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/orderCard"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/item_order_product_img_desc_text"
            android:scaleType="centerCrop"
            android:src="@drawable/default_product_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/productInfo"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/productTitleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_serif_display"
                        android:lines="1"
                        android:text="@string/default_product_title"
                        android:textColor="@color/axolotl_200"
                        android:textSize="@dimen/h4" />

                    <TextView
                        android:id="@+id/productDescriptionTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:lines="2"
                        android:text="@string/default_review"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="@dimen/caption" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/productPriceChipContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    tools:ignore="NotSibling,RelativeOverlap">

                    <TextView
                        android:id="@+id/productPriceChip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_serif_display"
                        android:text="@string/default_product_price"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h4"
                        app:chipBackgroundColor="@color/axolotl_10"
                        app:chipCornerRadius="7dp"
                        app:chipStrokeWidth="0dp" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/productStatusChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/poppins"
                    android:gravity="center"
                    android:text="@string/default_product_status"
                    android:textColor="@color/axolotl_100"
                    android:textSize="@dimen/caption"
                    android:textStyle="bold"
                    app:chipBackgroundColor="@color/axolotl_10"
                    app:chipStrokeWidth="0dp" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/heading_product_quantity_text"
                        android:textSize="@dimen/caption" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/default_product_quantity"
                        android:textSize="@dimen/caption"
                        android:textStyle="bold" />

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>