<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.cart.CartFragment">


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottomCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_serif_display"
                    android:text="@string/heading_my_cart_text"
                    android:textAllCaps="true"
                    android:textColor="@color/axolotl_200"
                    android:textSize="@dimen/h4"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cartRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:scrollbarSize="0dp"
                    android:scrollbarStyle="outsideInset"
                    tools:listitem="@layout/item_cart_product" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bottomCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="50dp"
            app:cardCornerRadius="0dp"
            android:layout_gravity="bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="5dp"
                android:paddingHorizontal="25dp"
                android:paddingVertical="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/heading_total_payment_text"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h5"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_product_price"
                        android:textColor="@color/black"
                        android:textSize="@dimen/h5" />
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:paddingHorizontal="35dp"
                    android:elevation="10dp"
                    android:text="@string/heading_order_text"
                    android:layout_centerVertical="true"
                    />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>