<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cartCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/item_order_product_img_desc_text"
            android:scaleType="centerCrop"
            android:src="@drawable/default_product_img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/productInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/productTitleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_serif_display"
                    android:lines="1"
                    android:text="@string/default_product_title"
                    android:textColor="@color/axolotl_200"
                    android:textSize="@dimen/h4" />

                <TextView
                    android:id="@+id/productDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/roboto"
                    android:lines="2"
                    android:text="@string/default_review"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/caption" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                >

                <TextView
                    android:id="@+id/productPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/dm_serif_display"
                    android:text="@string/default_product_price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h4"
                    tools:ignore="RelativeOverlap" />


                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/axolotl_10"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="5dp"
                        android:gravity="center"
                        >

                        <TextView
                            android:id="@+id/plusTextView"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:background="@drawable/ic_plus"
                            android:backgroundTint="@color/axolotl_100"
                            android:backgroundTintMode="multiply"
                            android:text=""
                            />


                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:cardElevation="5dp"
                            app:cardCornerRadius="5dp"
                            app:cardBackgroundColor="@color/white"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginVertical="2dp"
                            >
                            <TextView
                                android:id="@+id/productQuantityTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:paddingVertical="2dp"
                                android:paddingHorizontal="10dp"
                                android:textColor="@color/axolotl_100"
                                android:textStyle="bold"
                                android:text="@string/default_product_quantity"
                                />
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/minusTextView"
                            android:text=""
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:background="@drawable/ic_minus"
                            android:backgroundTint="@color/axolotl_100"
                            android:backgroundTintMode="multiply"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>