<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.main.HomeFragment"
    android:background="@color/white"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbarStyle="outsideInset"
            android:scrollbars="vertical">

            <!--   Search bar and profile icon     -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_centerVertical="true"
                    >

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardElevation="0dp"
                        app:cardCornerRadius="10dp"
                        >

                        <ImageView
                            android:id="@+id/userDisplayImage"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_avatar_fg"
                            android:contentDescription="@string/default_user_image_description" />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="10dp"
                        android:gravity="center_vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/default_greeting_message"
                            android:textColor="@color/gray"
                            android:textSize="@dimen/caption"
                            />

                        <TextView
                            android:id="@+id/userDisplayName"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/default_user_display_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/h5"
                            android:textStyle="bold"
                            />


                    </LinearLayout>

                </LinearLayout>

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:src="@mipmap/ic_launcher_round"
                    android:contentDescription="@string/ic_profile_text"
                    android:elevation="5dp" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="20dp"
                android:id="@+id/bannersRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/item_banner"
                android:scrollbarSize="0dp"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="horizontal"
                />

            <!--   Category Section     -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:fontFamily="@font/dm_serif_display"
                    android:text="@string/heading_popular_categories_text"
                    android:textAllCaps="true"
                    android:textColor="@color/axolotl_200"
                    android:textSize="@dimen/h4"
                    android:textStyle="bold" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoriesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="0dp"
                    android:orientation="horizontal"
                    android:scrollbarSize="0dp"
                    android:scrollbarStyle="outsideInset"
                    android:scrollbars="horizontal"
                    tools:listitem="@layout/item_category" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/productsParentRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:listitem="@layout/item_products" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>